[package]
name = "async_networking_rest_websockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tokio-websockets = "0.7.0"

[[bin]]
name = "client"
path = "bin/client.rs"

[[bin]]
name = "server"
path = "bin/server.rs"
